apps/viewer/src/App.css
body {
  margin: 0;
  padding: 0;
  overflow: hidden;
}

html,
body {
  overscroll-behavior-x: none;
  -webkit-font-smoothing: none !important;
  font-weight: normal !important;
}

* {
  -webkit-font-smoothing: none !important;
  font-weight: normal !important;
  font-size: 13px !important;
}

#root {
  height: 100vh;
  width: 100vw;
  /* overflow: auto; */
}

.scroll-area-sidebar > div > div {
  table-layout: fixed;
  width: 100%;
}

[data-transparency] [data-transparent] {
  backdrop-filter: blur(30px);
  background-color: color-mix(in srgb, var(--mantine-color-default) 80%, transparent);
}

.mantine-contextmenu {
  backdrop-filter: blur(30px) !important;
  background-color: color-mix(in srgb, var(--mantine-color-default) 80%, transparent) !important;
}

.fade-out-scroll {
  --mask:
    linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0) 0%,
      rgba(0, 0, 0, 0) 0%,
      rgba(0, 0, 0, 1) 1%,
      rgba(0, 0, 0, 1) 99%,
      rgba(0, 0, 0, 0) 100%,
      rgba(0, 0, 0, 0) 100%
    )
    100% 50% / 100% 100% repeat-x;
  -webkit-mask: var(--mask);
  mask: var(--mask);
  backdrop-filter: blur(30px) !important;
}

/* svg {
  shape-rendering: crispEdges;
} */

